--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@
 /* ---------------------------- */
 
 :root {
-  /* colors */
+  font-family: 'Jost', sans-serif;
 }
 
 /* ---------------------------- */
